<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:padding="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/asignatura"
            android:textStyle="bold"
            android:textSize="14sp"

            android:gravity="center_horizontal"/>

        <EditText
            android:id="@+id/edit_contenido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"

            android:layout_marginBottom="16dp"
            android:minHeight="48dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aula"


            android:textSize="14sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center_vertical"

            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_aula"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/gpshorario_borde_texto"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="14sp" />

            <Button
                android:id="@+id/seleccion_aula"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:background="@drawable/fondo_degradado_botones"
                android:paddingStart="16dp"
                android:textColor="#FFFFFF"
                android:text="@string/seleccionar_aula"
                app:backgroundTint="@null"
                android:textAllCaps="false"
                android:textSize="14sp" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color"

            android:textSize="14sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/layout_selector_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingTop="8dp">

            <View
                android:id="@+id/view_color_preview"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/gpshorario_borde_texto"
                />
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btn_cambiar_color"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:backgroundTint="#8E72E8"
                android:paddingStart="16dp"
                android:text="@string/elegir_color"

                android:textSize="12sp" />

            <Button
                android:id="@+id/btn_colores_recientes"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#8E72E8"
                android:paddingStart="16dp"
                android:text="@string/colores_recientes"

                android:textSize="12sp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textStyle="bold"
            android:textSize="14sp"

            android:gravity="center_horizontal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_ir_mapa"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/fondo_degradado_botones"
                android:textColor="#FFFFFF"
                android:text="@string/ver_aula_en_el_mapa"
                app:backgroundTint="@null"

                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>


    </LinearLayout>
</ScrollView>